[WIP] Add links and content to navbar subreddit dropdown

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -20,11 +20,11 @@
   }
 
   .user-info {
-    margin-top: 50px;
     background-color: lightblue;
     display: block;
     text-align: center;
     margin-left: 80%;
+    margin-bottom: -50px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
   }
@@ -39,4 +39,8 @@
 
   .intro-content {
     margin-top: 20%;
+  }
+
+  .alert {
+    margin-top: 50px;
   }
