--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,10 +8,19 @@
     </div>
 
     <% if current_user %>
+      <div class="user-info">
+        <p class="user"><%= current_user.username %> (<%= current_user.link_karma %> :: <%= current_user.comment_karma %>) || <%= link_to "logout", logout_path, method: :delete %></p>
+      </div>
+    <% end %>
+
+    <% if current_user %>
       <ul class="nav navbar-nav navbar-left">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Subreddits <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <% user_subreddits.each do |subreddit| %>
+              <li><%= link_to "#{subreddit.display_name}", "#{subreddit.url}" %></li>
+            <% end %>
           </ul>
         </li>
       </ul>
