--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <%= sanitize(message) %>
       </div>
     <% end %>
-    <div class="container">
+    <div class="container page-content">
       <%= yield %>
     </div>
   </body>
