--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Subreddits <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <% user_subreddits.each do |subreddit| %>
-              <li><%= link_to "#{subreddit.display_name}", "#{subreddit.url}" %></li>
+              <li><%= link_to "#{subreddit.display_name}", subreddit_path(subreddit.display_name) %></li>
             <% end %>
           </ul>
         </li>
