--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -12,6 +12,7 @@
     background-size: 250px;
     background-position: right bottom;
     background-attachment: fixed;
+    background-color: rgba(106, 255, 230, .1);
   }
 
   .logo {
@@ -53,4 +54,8 @@
   .img-rounded {
     width: 75px;
     height: 50px;
+  }
+
+  .buffer {
+    margin-left: 10px;
   }
