--- a/app/views/subreddits/show.html.erb
+++ b/app/views/subreddits/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Hot 15 in /r/<%= params[:name] %></h1>
+<h1>Hot 15 in /r/<%= @posts.first.subreddit %></h1>
 <div class="well col-md-10">
   <table class="table table-hover table-striped table-responsive">
     <thead>
@@ -10,9 +10,10 @@
     <tbody>
       <% @posts.each_with_index do |post, index| %>
         <tr>
-          <td><%= index + 1 %></td>
-          <td><%= post.score %></td>
+          <td class="text-center"><%= index + 1 %></td>
+          <td class="text-center"><%= post.score %></td>
           <td><%= link_to post.title, post.url %></td>
+          <td class="text-center"><%= link_to post.num_comments, post.comments_url %></td>
         </tr>
       <% end %>
     </tbody>
